--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -8,41 +8,23 @@ In this study, we used EEG data previously collected by our lab as part of a lar
 
 ```{r demographic-descriptives}
 tar_load(participant_descriptives)
-```
-
-Data from `r xfun::numbers_to_words(participant_descriptives$n)` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) was collected as part of the larger study mentioned above. All participants were right handed, spoke English as a first language, and had normal or corrected-to-normal vision. No participants had a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications within the last two years preceding data collection. Three participants were excluded from analyses because they did not participate in the final session; one participant was excluded because their data from the final session was lost; and three participants were excluded because they had one or more recordings that were of an unusable quality.
-
-```{r demographic-descriptives-final}
 tar_load(participant_descriptives_final)
 ```
 
-The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`). All data descriptions and results described below are based on this final sample. 
+`r xfun::numbers_to_words(participant_descriptives$n)` healthy adults (`r participant_descriptives$male` males, `r participant_descriptives$female` females) whose ages ranged from `r participant_descriptives$years_age_min` to `r participant_descriptives$years_age_max` years (M = `r papaja::apa_num(participant_descriptives$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_age_sd)`) and whose years of education ranged from `r participant_descriptives$years_education_min` to `r participant_descriptives$years_education_max` years (M = `r papaja::apa_num(participant_descriptives$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives$years_education_sd)`) participated in the study. All participants were right handed, spoke English as a first language, and had normal or corrected-to-normal vision. Exclusion criteria for participation included a history of neurological disease or disorder, mental illness, head trauma, alcoholism or drug abuse, or use of psychotropic medications within the last two years preceding data collection. We excluded EEG data for analysis from three participants because they did not participate in the final session; one participant because their data from the final session was lost; and three participants because they had one or more recordings with excessive noise. The final sample used for analysis consisted of `r xfun::numbers_to_words(participant_descriptives_final$n)` participants (`r participant_descriptives_final$male` males, `r participant_descriptives_final$female` females) whose ages ranged from `r participant_descriptives_final$years_age_min` to `r participant_descriptives_final$years_age_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_age_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_age_sd)`) and whose years of education ranged from `r participant_descriptives_final$years_education_min` to `r participant_descriptives_final$years_education_max` years (M = `r papaja::apa_num(participant_descriptives_final$years_education_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$years_education_sd)`).
 
 ### Electrophysiological Data Acquisition
 
-Electrophysiological data acquisition for each participant was done within a dimly lit, radio frequency shielded, and sound attenuated chamber during three separate sessions. The time between the first and second session ranged from `r participant_descriptives_final$days_pre_to_post_min` to `r participant_descriptives_final$days_pre_to_post_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_sd)`), and the time between the second and third session ranged from `r participant_descriptives_final$days_post_to_followup_min` to `r participant_descriptives_final$days_post_to_followup_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_sd)`).
+Electrophysiological data acquisition was completed in a dimly lit, radio frequency shielded, and sound attenuated chamber. During each session, an EasyCap electrolyte-gel-filled cap with 64 active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording. EEG recording lasted for a total of 80 minutes. We first recorded five minutes of eyes open and five minutes of eyes closed resting state date, with the order of these conditions counter-balanced across participants. This was followed by approximately 60 minutes of task state data recorded during performance of a lexical decision task [for a detailed description, see @cnuddeetal_IncreasedNeuralEfficiency_2021]. Finally, eyes open and eyes closed resting state data were recorded for five minutes each, again counter-balanced across participants.
 
-During each session, an EasyCap electrolyte-gel-filled cap with 64 active electrodes positioned following the 10-10 system [@chatrianetal_TenPercentElectrode_1985; @chatrianetal_ModifiedNomenclature10_1988] was used to continuously record electrophysiological activity at the scalp (Brain Products GmbH, Gilching, Germany). Channel Cz was used as the reference electrode. A Brain Vision Solutions actiCHamp amplifier was used to amplify microvolt signals from the electrodes and transform them into digital format for storage and analysis (Brain Products GmbH, Gilching, Germany). All data were sampled at 500 Hz, and band limited with a built-in 0.05-100 Hz band-pass filter. All electrode impedances were below 17 kW at the start of recording.
-
-Within a session, each participant was recorded for a total of 80 minutes. We first recorded ten minutes of resting state data, in which participants had their eyes open for five minutes and their eyes closed for five minutes. The order of eyes open and eyes closed was counter-balanced across participants. This was followed by approximately 60 minutes of task state data recorded during performance of a lexical decision task [for a detailed description, see @cnuddeetal_IncreasedNeuralEfficiency_2021]. Finally, ten more minutes of resting state data were recorded, with the order of eyes open and eyes closed again being counter-balanced across participants.
-
-Across all three sessions, each participant was recorded for a total of 30 minutes during eyes open resting state (over 6 recordings), 30 minutes during eyes closed resting state (over 6 recordings), and 180 minutes during task state (over 3 recordings).
+Across all three sessions, we collected a total of 30 minutes eyes open resting state data (over 6 recordings) and 30 minutes eyes closed resting state data (over 6 recordings) from each participant. The time between the first and second session ranged from `r participant_descriptives_final$days_pre_to_post_min` to `r participant_descriptives_final$days_pre_to_post_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_pre_to_post_sd)`), and between the second and third session ranged from `r participant_descriptives_final$days_post_to_followup_min` to `r participant_descriptives_final$days_post_to_followup_max` days (M = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_mean)`, SD = `r papaja::apa_num(participant_descriptives_final$days_post_to_followup_sd)`).
 
 ### EEG preprocessing
 
-#### Removing noise and non-neural artifacts
+#### Artifact removal
 
-Raw EEG data was preprocessed to remove noise and non-neural artifacts from the data. All EEG preprocessing was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>; @gramfortetal_MEGEEGData_2013]. The following steps were done to preprocess the raw EEG data from each recording.
-
-First, following recommendations by @widmannetal_DigitalFilterDesign_2015, a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter was used to remove slow drift potentials at infraslow frequencies less than 0.10 Hz, line noise at 60.00 Hz, and irrelevant noise fluctuations greater than 60.00 Hz [@decheveignenelken_FiltersWhenWhy_2019; @widmannetal_DigitalFilterDesign_2015]. The finite impulse response filter used a Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation. The lower passband edge and transition bandwidth were set at 0.10 Hz (-12 dB cutoff frequency: 0.05 Hz), and the upper passband edge and transition bandwidth were set at 50.00 Hz (-12 dB cutoff frequency: 56.25 Hz). The filter length was 16501 samples (33.002 seconds). These filter parameters were selected after exploring the difference between raw and filtered signals and verifying that the selected filter parameters improved signal quality over alternative filter parameters or the raw signal [@widmannetal_DigitalFilterDesign_2015].
-
-Second, the data was downsampled from 500 to 200 Hz in order to reduce the size of the data and speed up computations operating on the data.
-
-Third, data was rereferenced from Channel Cz, which served as the original reference electrode during recording, to a virtual common average reference electrode in order to reduce spatial biases in the signal amplitude of channels caused by their distance to the original reference electrode. Rereferencing was done by first adding Channel Cz to the data with its values set to zero, then calculating the average of the signal across all channels. This average signal was subtracted from each channel's signal, which allowed each channel to contribute equally to the new reference [@nunezsrinivasan_ElectricFieldsBrain_2006].
-
-Fourth, bad channels and segments were manually marked and removed to prepare the data for ICA decomposition. Channels were marked as bad if they contained excessive noise or drift for a significant portion of the recording. Segments were marked as bad if they contained excessive noise or drift that (1) could interfere with fitting the ICA decomposition due to the amount of variance their component would capture, or (2) was unlikely to be repaired by ICA decomposition. These were subjective judgements and we did our best to make consistent decisions about what was bad across recordings.
-
-```{r bad-channels-descriptives}
+```{r bads-descriptives}
+# Bad channels descriptive statistics
 tar_load(bad_channels_descriptives_final)
 
 bad_channels_percent_nrow <- nrow(bad_channels_descriptives_final$count_per_recording)
@@ -54,29 +36,7 @@ bad_channels_n_min  <- bad_channels_descriptives_final$descriptives$bad_channels
 bad_channels_n_max  <- bad_channels_descriptives_final$descriptives$bad_channels_n_max
 bad_channels_n_mode <- bad_channels_descriptives_final$descriptives$bad_channels_n_mode
 
-bad_channels_count_nrow  <- nrow(bad_channels_descriptives_final$count_per_channel)
-bad_channels_power_law   <- round(bad_channels_count_nrow*0.2)
-bad_channels_top_five_df <- head(
-  bad_channels_descriptives_final$count_per_channel, bad_channels_power_law
-)
-bad_channels_top_five <- bad_channels_top_five_df |>
-  dplyr::pull(bad_channels) |>
-  paste(collapse = ", ")
-bad_channels_top_five_percent <- bad_channels_top_five_df |>
-  dplyr::pull(percent_cumulative) |>
-  tail(1)
-```
-
-Figure \@ref(fig:bad-channels-plots)A shows the number of bad channels marked per recording across the entire sample. Bad channels were marked in `r papaja::apa_num(bad_channels_percent_bad)`% of recordings, ranging from `r bad_channels_n_min` to `r bad_channels_n_max` bad channels marked per recording with a mode of `r bad_channels_n_mode`. Figure \@ref(fig:bad-channels-plots)B shows the number of times a given channel was marked bad across the entire sample. The number of times channels were marked bad followed a power law distribution, with the 20% most marked channels (`r bad_channels_top_five`) accounting for `r papaja::apa_num(bad_channels_top_five_percent)`% of times a channel was marked bad across the entire sample.
-
-```{r bad-channels-plots}
-#| fig.cap: |
-#|   TODO: Write caption.
-tar_load(bad_channels_plots_final)
-bad_channels_plots_final$plot_count_per_recording + bad_channels_plots_final$plot_count_per_channel
-```
-
-```{r bad-segments-descriptives}
+# Bad segments descriptive statistics
 tar_load(bad_segments_descriptives_final)
 
 bad_segments_percent_nrow <- nrow(bad_segments_descriptives_final$count_per_recording)
@@ -94,45 +54,17 @@ bad_segments_duration_totals_min  <- min(bad_segments_duration_totals)
 bad_segments_duration_totals_max  <- max(bad_segments_duration_totals)
 bad_segments_duration_totals_mean <- mean(bad_segments_duration_totals)
 bad_segments_duration_totals_sd   <- sd(bad_segments_duration_totals)
-
-bad_segments_durations <- bad_segments_descriptives_final$bad_segment_durations |>
-  dplyr::pull(annotation_durations)
-bad_segments_durations_min  <- min(bad_segments_durations)
-bad_segments_durations_max  <- max(bad_segments_durations)
-bad_segments_durations_mean <- mean(bad_segments_durations)
-bad_segments_durations_sd   <- sd(bad_segments_durations)
-
 ```
 
-Figure \@ref(fig:bad-segments-plots)A shows the number of bad segments marked per recording across the entire sample. Bad segments were marked in `r papaja::apa_num(bad_segments_percent_bad)`% of the recordings, ranging from `r bad_segments_n_min` to `r bad_segments_n_max` bad segments marked per recording with a mode of `r bad_segments_n_mode`. Figure \@ref(fig:bad-segments-plots)B shows the total duration of bad segments in seconds per recording across the entire sample, which ranged from `r papaja::apa_num(bad_segments_duration_totals_min)` to `r papaja::apa_num(bad_segments_duration_totals_max)` seconds long (M = `r papaja::apa_num(bad_segments_duration_totals_mean)`, SD = `r papaja::apa_num(bad_segments_duration_totals_sd)`). Figure \@ref(fig:bad-segments-plots)C shows the duration of individual bad segments in seconds across recordings for the entire sample, which ranged from `r papaja::apa_num(bad_segments_durations_min)` to `r papaja::apa_num(bad_segments_durations_max)` seconds long (M = `r papaja::apa_num(bad_segments_durations_mean)`, SD = `r papaja::apa_num(bad_segments_durations_sd)`).
+Raw EEG data was preprocessed to remove noise and non-neural artifacts from the data. All EEG preprocessing was done using the open source Python package MNE-Python [version 2.2.0, <https://doi.org/10.5281/zenodo.4338426>; @gramfortetal_MEGEEGData_2013]. The following steps were done to preprocess the raw EEG data from each recording.
 
-```{r bad-segments-plots}
-#| fig.cap: |
-#|   TODO: Write caption.
-tar_load(bad_segments_plots_final)
-bad_segments_plots_final$plot_count_per_recording +
-  bad_segments_plots_final$plot_duration_totals +
-  bad_segments_plots_final$plot_durations
-```
-
-Fifth, ICA decomposition fitted using the Picard algorithm [@ablinetal_FasterICAOrthogonal_2017; @ablinetal_FasterIndependentComponent_2018] was performed to remove components carrying muscle artifacts or ocular artifacts (eye blinks, saccades, or horizontal eye movements) from the data. Components carrying artifacts were manually marked for removal.
-
-Finally, the activity of bad channels removed in step four was interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and the interpolated channels were put back into the data. This was done to ensure the number of channels was constant across recordings.
+First, following recommendations by @widmannetal_DigitalFilterDesign_2015, a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter was used to remove slow drift potentials at infraslow frequencies less than 0.10 Hz, line noise at 60.00 Hz, and irrelevant noise fluctuations greater than 60.00 Hz [@decheveignenelken_FiltersWhenWhy_2019; @widmannetal_DigitalFilterDesign_2015]. The finite impulse response filter used a Hamming window with 0.0194 passband ripple and 53 dB stopband attenuation. The lower passband edge and transition bandwidth were set at 0.10 Hz (-12 dB cutoff frequency: 0.05 Hz), and the upper passband edge and transition bandwidth were set at 50.00 Hz (-12 dB cutoff frequency: 56.25 Hz). The filter length was 16501 samples (33.002 seconds). These filter parameters were selected after exploring the difference between raw and filtered signals and verifying that the selected filter parameters improved signal quality over alternative filter parameters or the raw signal [@widmannetal_DigitalFilterDesign_2015]. Second, the data was downsampled from 500 to 200 Hz in order to reduce the size of the data and speed up computations operating on the data. Third, data was rereferenced to a virtual common average reference electrode in order to reduce spatial biases in the signal amplitude of channels caused by their distance to the original reference electrode [@nunezsrinivasan_ElectricFieldsBrain_2006]. Fourth, bad channels and segments were manually marked and removed to prepare the data for ICA decomposition. Channels were marked as bad if they contained excessive noise or drift for a significant portion of the recording. Bad channels were marked in `r papaja::apa_num(bad_channels_percent_bad)`% of recordings, ranging from `r bad_channels_n_min` to `r bad_channels_n_max` bad channels marked per recording with a mode of `r bad_channels_n_mode`. Segments were marked as bad if they contained excessive noise or drift that (1) could interfere with fitting the ICA decomposition due to the amount of variance their component would capture, or (2) was unlikely to be repaired by ICA decomposition.  Bad segments were marked in `r papaja::apa_num(bad_segments_percent_bad)`% of the recordings, ranging from `r bad_segments_n_min` to `r bad_segments_n_max` bad segments marked per recording with a mode of `r bad_segments_n_mode`. The total duration of bad segments per recording across the entire sample ranged from `r papaja::apa_num(bad_segments_duration_totals_min)` to `r papaja::apa_num(bad_segments_duration_totals_max)` seconds long (M = `r papaja::apa_num(bad_segments_duration_totals_mean)`, SD = `r papaja::apa_num(bad_segments_duration_totals_sd)`). Fifth, ICA decomposition fitted using the Picard algorithm [@ablinetal_FasterICAOrthogonal_2017; @ablinetal_FasterIndependentComponent_2018] was performed to remove components carrying muscle artifacts or ocular artifacts (eye blinks, saccades, or horizontal eye movements) from the data. Components carrying artifacts were manually selected and then removed. Finally, bad channels were interpolated using spherical splines [@perrinetal_SphericalSplinesScalp_1989] and put back into the data.
 
 #### Preparing for functional connectivity analysis
 
-After removing noise and non-neural artifacts, the continuous data was divided into epochs and filtered to prepare for functional connectivity analysis. This was a three step process. First, the continuous data was divided into equally spaced, overlapping epochs. Epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred---with reference to the continuous data---from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed from the data. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth, until the end of the recording.
+After artifact rejection, the continuous data was divided into epochs and filtered to prepare for functional connectivity analysis. This was a three step process. First, the continuous data was divided into equally spaced, overlapping epochs. Epochs with an 8 second duration were created at 5 second intervals such that an epoch occurred from 0-8 seconds, 5-13 seconds, 10-18 seconds, and so forth, until the end of the recording. Epochs that contained a bad segment were removed from the data. Second, the epoched data was filtered into five frequency bands---delta ($\delta$, 1-4 Hz), theta ($\theta$, 4-8 Hz), alpha ($\alpha$, 8-13 Hz), beta ($\beta$, 13-30 Hz), and gamma ($\gamma$, 30-50 Hz)---using a two-pass forward and reverse, zero-phase, non-causal band-pass finite impulse response filter. Third, epochs were cropped to a 5 second duration starting 1 second into each epoch such that an epoch then occurred from 1-6 seconds, 6-11 seconds, 11-16 seconds, and so forth.
 
-The purpose of this three step process was as follows: Filtering the data into five frequency bands allowed us to investigate whether the organization of functional networks between and within individuals was dependent or invariant of temporal scale (frequency band), rather than assuming network organization was governed solely by broadband processes [@mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]; the five frequency bands we selected are thought to represent different neural processes [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020], and are more prominent in different brain regions following a medial-to-lateral and posterior-to-anterior gradient of increasing frequency [@capillaetal_NaturalFrequenciesResting_2022]. However, filtering epoched data creates edge artifacts at the start and end of each epoch that distort the true signal. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data, preserving the true signal across the length of the recording. The 5 second duration was selected based on the minimum epoch length required to get reliable phase coupling estimates in the delta band.
-
-<!-- TODO: Add notes about appendix/supplement for label connectivity -->
-
-<!-- Don't include this in the manuscript because someone is just going to ask why it went wrong according to Andrea...
-
-As a final preprocessing step, we originally planned for sensor space signal time courses to be source localized and reconstructed to regions of a common template whole-brain parcellation following the pipeline recommended by @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020 so that functional connectivity could estimated between pairs of cortical regions rather than pairs of EEG channels. Our motivation to transform the data from sensor space to source space was twofold: First, the location of EEG channels on the scalp does not easily translate to the location of the underlying neural sources, preventing the interpretation of sensor space functional networks in terms of neuroanatomy [@laietal_ComparisonScalpSourcereconstructed_2018]. Second, the effects of field spread and volume conduction in the head can cause multiple electrodes to record activity from the same underlying neural source, resulting in spurious functional connectivity estimates between channels in sensor space [@nunezsrinivasan_ElectricFieldsBrain_2006; @schoffelengross_SourceConnectivityAnalysis_2009]; by estimating the location of the underlying neural sources through source localization, functional connectivity can instead be estimated at the level of the underlying neural sources, reducing (but not mitigating) the spurious effects of field spread and volume conduction [@oneilletal_DynamicsLargescaleElectrophysiological_2018; @schoffelengross_SourceConnectivityAnalysis_2009].
-
-However, after examining the source space functional connectivity estimates (the functional connectivity metrics we used are described in the next step below), we found that they were largely noise---showing consistently low connectivity between all brain regions, regardless of recording or frequency band. In contrast, sensor space functional connectivity estimates showed appreciable levels of connectivity and variation across recordings and frequency bands. Given this discrepancy, we did not feel confident in the quality of the transformations made to the data during source localization and reconstruction, so we decided to forgo this step.
--->
+The purpose of this three step process was as follows: Filtering the data into five frequency bands allowed us to investigate whether the organization of functional networks between and within individuals was dependent or invariant of timescale (frequency band), rather than assuming network organization was governed solely by broadband processes [@mostamesadaghiani_OscillationBasedConnectivityArchitecture_2021]. However, filtering epoched data creates edge artifacts at the start and end of each epoch that distort the true signal. Creating longer epochs in the first step provided padding around the edges of each epoch that could be cropped in the third step to remove these edge artifacts; and overlapping epochs in the first step made it possible for the cropped epochs in the third step to be non-overlapping and contiguous with reference to the continuous data, preserving the true signal across the length of the recording. The 5 second duration was selected based on the minimum epoch length required to get reliable phase coupling estimates in the delta band.
 
 ## Analyses
 
@@ -347,7 +279,7 @@ After estimating the RV coefficient between all pairs of phase- and amplitude-ba
 
 #### Visualizing functional connectome similarity
 
-We collected the RV coefficient estimates into a similarity matrix, and then visualized them with a heat map to examine the amount and pattern of similarity within states, individuals, sessions, and the entire sample. With large effects, we would expect visually obvious patterns of similarity estimates corresponding to the archetypal outcomes discussed in the introduction.
+We collected the RV coefficient estimates into a similarity matrix, and then visualized them with a heat map to examine the amount and pattern of similarity within states, individuals, sessions, and the entire sample. With large effects, we would expect visually obvious patterns of similarity estimates corresponding to the archetypal outcomes depicted in Figure \@ref(fig:similarity-key) in the introduction.
 
 #### Modelling functional connectome similarity
 
